--- a/backend/package.json
+++ b/backend/package.json
@@ -20,7 +20,8 @@
     "@types/node": "^22.10.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.6",
-    "express": "^4.21.1"
+    "express": "^4.21.1",
+    "openai": "^4.76.0"
   },
   "devDependencies": {
     "concurrently": "^9.1.0",
