--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.22.3",
+    "vercel": "^39.2.2",
     "xml2js": "^0.6.2"
   },
   "devDependencies": {
